--- a/overrides/main.html
+++ b/overrides/main.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
 {% block htmltitle %}
-  <title>{{ page.title | default(config.site_name, true)}}_杨小哥博客_和我一起成长！</title>
-  <meta name="keywords" content="杨小哥博客,yiouejv,python,python学习,mysql,数据库,游戏开发,skynet,数据结构,数据结构与算法,算法,lua,linux">
-  <meta name="description" content="杨小哥博客,yiouejv,python,python学习,mysql,数据库,游戏开发,skynet,数据结构,数据结构与算法,算法,lua,linux">
+  <title>{{ page.title | default(config.site_name, true)}}_杨小哥笔记_和我一起成长！</title>
+  <meta name="keywords" content="杨小哥笔记,yiouejv,python,python学习,mysql,数据库,游戏开发,skynet,数据结构,数据结构与算法,算法,lua,linux">
+  <meta name="description" content="杨小哥笔记,yiouejv,python,python学习,mysql,数据库,游戏开发,skynet,数据结构,数据结构与算法,算法,lua,linux">
   <style type="text/css">
       .md-header {
         /*background-color: rgb(47, 186, 170) !important;*/
